tests/error/private_func_out.gw
// [contains] private outside of class
private fun void test(){}
